...
                                       android:layout_height="wrap_content"
                                       app:title="@string/app_name"
    />
    <FrameLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:paddingBottom="100dp"
                android:clipToPadding="false"
        />
...
                android:drawableTop="@drawable/ic_error_outline_black_24dp"
                android:text="@string/error"
                android:layout_gravity="center"
        />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/newItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add"
                android:layout_gravity="end|bottom"
                android:layout_margin="32dp"
        />
...
