...
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">


    <EditText
            android:id="@+id/step1Title"
            android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Title"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/stepHeader" android:layout_marginTop="32dp" android:hint="Title"
            android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar"
    />
    <Button
            android:text="Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar"

    />
    <TextView
            android:text="What's up?"
...
