<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingTop="8dp"
              android:paddingBottom="8dp"
              android:paddingLeft="16dp"
              android:paddingRight="16dp">

    <CheckBox android:id="@+id/checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_marginStart="16dp"
              android:layout_gravity="center_vertical"/>

    <TextView android:id="@+id/text" android:layout_width="0dp" android:layout_height="wrap_content"
              android:layout_weight="1"
              android:layout_gravity="center_vertical"
    />

</LinearLayout>