...


    <Button
            android:text="Create TODO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar"
    />
    <Button
            android:text="Previous"
            android:layout_width="wrap_content"
...
